tests/fixtures/invalid/impl_cycle.etcm
spec Loop:
  value: int = Field(default=1)

impl a <- b:
  value: 1

impl b <- a:
  value: 2
